--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "bpf.h": "c"
+        "bpf.h": "c",
+        "bpf_helpers.h": "c",
+        "bpf_tracing.h": "c",
+        "sched.h": "c"
     }
 }
