feat: remove unnecessary headers

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/kernel-headers"]
 	path = lib/kernel-headers
 	url = https://github.com/sabotage-linux/kernel-headers.git
+[submodule "lib/libbpf"]
+	path = lib/libbpf
+	url = https://github.com/libbpf/libbpf.git
